--- a/src/_includes/webmentions.njk
+++ b/src/_includes/webmentions.njk
@@ -1,71 +1,85 @@
+{%- rollup "src/input/js/is-land.js" | url -%}
 {%- set postMentions = webmentions | webmentionsForPage -%}
-<article id="webmentions" class="[ webmentions ][ flow ]">
-	{%- ifAsync postMentions.likes.length -%}
-		{%- if postMentions.likes.length === 1 -%}
-			{%- set facepileMentionsHeading -%}
-				{{ postMentions.likes.length }} Like
-			{%- endset -%}
-		{%- elif (postMentions.likes.length > 1) -%}
-			{%- set facepileMentionsHeading -%}
-				{{ postMentions.likes.length }} Likes
-			{%- endset -%}
+<article id="webmentions" class="[ webmentions ]">
+	<details class="[ flow ]">
+		<summary id="webmentions-summary" class="[ h2 ]">
+			{{- postMentions.total + " " if postMentions.total >= 1 -}}
+			Webmentions
+		</summary>
+		<is-land on:visible>
+			<template data-island>
+				{%- rollup "src/input/js/get-webmentions.js" | url -%}
+			</template>
+		</is-land>
+		{%- ifAsync postMentions.likes.length -%}
+			{%- set namepileMentionType = "Like" -%}
+			{%- set namepileMentions = postMentions.likes -%}
+			{%- include "webmentions-namepile.njk" -%}
+		{%- else -%}
+			<div id="webmentions-likes" hidden></div>
 		{%- endif -%}
-		{%- set facepileMentions = postMentions.likes -%}
-		{%- include "webmentions-facepile.njk" -%}
-	{%- endif -%}
-	{%- ifAsync postMentions.reposts.length -%}
-		{%- if postMentions.reposts.length === 1 -%}
-			{%- set facepileMentionsHeading -%}
-				{{ postMentions.reposts.length }} Repost
-			{%- endset -%}
-		{%- elif (postMentions.reposts.length > 1) -%}
-			{%- set facepileMentionsHeading -%}
-				{{ postMentions.reposts.length }} Reposts
-			{%- endset -%}
+		{%- ifAsync postMentions.reposts.length -%}
+			{%- set namepileMentionType = "Repost" -%}
+			{%- set namepileMentions = postMentions.reposts -%}
+			{%- include "webmentions-namepile.njk" -%}
+		{%- else -%}
+			<div id="webmentions-reposts" hidden></div>
 		{%- endif -%}
-		{%- set facepileMentions = postMentions.reposts -%}
-		{%- include "webmentions-facepile.njk" -%}
-	{%- endif -%}
-	{%- if postMentions.comments.length -%}
-		<details {% if page.url !== "/" %}open{% endif %}>
-			<summary class="[ h3 ]">
-				{%- if postMentions.comments.length === 1 -%}
-					{{ postMentions.comments.length }} Comment
-					{%- elif (postMentions.comments.length > 1) -%}
-					{{ postMentions.comments.length }} Comments
-					{%- endif -%}
-			</summary>
-			<ol class="[ flow ]">
-				{%- asyncEach mention in postMentions.comments -%}
-				{%- include "webmention.njk" -%}
-				{%- endeach -%}
-			</ol>
+		{%- if postMentions.comments.length -%}
+			<details id="webmentions-comments">
+				<summary class="[ h3 ]">
+					{{- postMentions.comments.length }} Comment
+					{%- if (postMentions.comments.length > 1) %}s{% endif -%}
+				</summary>
+				<ol class="[ flow ]">
+					{%- asyncEach comment in postMentions.comments -%}
+					{%- include "webmentions-comments.njk" -%}
+					{%- endeach -%}
+				</ol>
+			</details>
+		{%- else -%}
+			<div id="webmentions-comments" hidden></div>
+		{%- endif -%}
+		{%- if postMentions.mentions.length -%}
+			<details id="webmentions-mentions">
+				<summary class="[ h3 ]">
+					{{- postMentions.mentions.length }} Mention
+					{%- if (postMentions.mentions.length > 1) %}s{% endif -%}
+				</summary>
+				<ol class="[ flow ]">
+					{%- asyncEach mention in postMentions.mentions -%}
+					{%- include "webmentions-mentions.njk" -%}
+					{%- endeach -%}
+				</ol>
+			</details>
+		{%- else -%}
+			<div id="webmentions-mentions" hidden></div>
+		{%- endif -%}
+		<details class="[ flow flow-space-setter ]" style="--flow-space-setter: 0.5em;">
+			<summary style="font-size: var(--font-size-2);">Have you published your own post mentioning this one?</summary>
+			<form action="https://webmention.io/www.ellyloel.com/webmention" method="post" class="[ webmentions-form ][ flow flow-space-setter ]">
+				<label for="form-webmention-source">
+					Let me know the URL
+				</label>
+				<div class="[ input-wrapper ]">
+					<input
+						id="form-webmention-source"
+						type="url"
+						name="source"
+						required="required"
+						class="[ input ]">
+					<input type="hidden" name="target" value="{{ metadata.url }}{{ page.url }}">
+					<button type="submit">Send webmention</button>
+				</div>
+			</form>
+			<small>
+				Powered by
+				<a href="https://indieweb.org/Webmention">Webmentions</a>
+				via
+				<a href="https://webmention.io">Webmention.io</a>
+				and
+				<a href="https://brid.gy">Bridgy</a>.
+			</small>
 		</details>
-	{%- endif -%}
-	<footer class="[ webmentions-header ][ flow ]">
-		<form action="https://webmention.io/www.ellyloel.com/webmention" method="post" class="[ webmentions-form ][ flow ]">
-			<label for="form-webmention-source">
-				Have you published your own post mentioning this one? Let me know the URL:
-			</label>
-			<div class="[ input-wrapper ]">
-				<input
-					id="form-webmention-source"
-					type="url"
-					name="source"
-					placeholder="https://example.com"
-					required="required"
-					class="[ input ]">
-				<input type="hidden" name="target" value="{{ metadata.url }}{{ page.url }}">
-				<button type="submit">Send</button>
-			</div>
-		</form>
-		<small>
-			Powered by
-			<a href="https://indieweb.org/Webmention">Webmentions</a>
-			via
-			<a href="https://webmention.io">Webmention.io</a>
-			and
-			<a href="https://brid.gy">Bridgy</a>
-		</small>
-	</footer>
+	</details>
 </article>
