--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -13,7 +13,7 @@ eleventyImport:
 		<h1>
 			<span class="[ p-note ] [ visually-hidden ]">Hi, I'm Elly. I like creating delightful, magical, and accessible art with code.</span>
 			<span class="[ detitlify ]" aria-hidden="true">
-				Hi, I’m <span class="[ logo-inline ]" title="Elly">&lt;e//y&gt;</span>
+				Hi, I’m <span class="[ logo-inline ]">{% icon "local:elly" %}</span>
 			</span>
 			<span aria-hidden="true">I like creating <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">delightful</span>, <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">magical</span>, and <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
 		</h1>
