Overhauling fonts setup - Removing Noto Color Emoji (too heavy) - Removing Work Sans (too heavy) - Adding improved fallbacks for Fraunces and JetBrains Mono - Fluid base font-size (based on Scott O'Hara's setup)

--- a/src/input/css/blocks/date.css
+++ b/src/input/css/blocks/date.css
@@ -1,4 +1,5 @@
 .dt-published,
 .dt-updated {
-	font-family: "JetBrains Mono", var(--font-mono);
+	font-family: "JetBrains Mono", "JetBrains Mono Fallback", var(--font-mono);
+	letter-spacing: normal;
 }
