Fixing all width media queries to be ems

--- a/src/input/css/blocks/card.css
+++ b/src/input/css/blocks/card.css
@@ -24,7 +24,7 @@
 		transition: box-shadow 150ms var(--ease-1);
 	}
 
-	@media (width >= 35em) {
+	@media (width >= 35em) { /* 560px */
 		grid-template-areas: "content image";
 	}
 
