--- a/src/input/css/blocks/hero.css
+++ b/src/input/css/blocks/hero.css
@@ -30,7 +30,7 @@
 		}
 	}
 
-	@media (width >= 768px) {
+	@media (width >= 48em) { /* 768px */
 		grid-template-columns: auto var(--size-8) 1fr;
 
 		& h1 {
