--- a/src/input/css/blocks/photos.css
+++ b/src/input/css/blocks/photos.css
@@ -5,7 +5,7 @@
 		object-fit: cover;
 	}
 
-	@media (width >= 768px) {
+	@media (width >= 48em) { /* 768px */
 		grid-template-columns: 2fr 1fr;
 		grid-template-columns: 1fr 1fr 1fr;
 		row-gap: var(--size-8);
