--- a/src/input/css/utilities/panel.css
+++ b/src/input/css/utilities/panel.css
@@ -3,7 +3,7 @@
 	margin: var(--size-7) 0;
 	padding: var(--size-7) 0;
 
-	@media (width >= 768px) {
+	@media (width >= 48em) { /* 768px */
 		margin: var(--size-8) 0;
 		padding: var(--size-8) 0;
 	}
