--- a/src/input/root/webmanifest.njk
+++ b/src/input/root/webmanifest.njk
@@ -2,7 +2,7 @@
 permalink: "manifest.webmanifest"
 ---
 {
-	"lang": "{{ metadata.language }}",
+	"lang": "{{ metadata.lang }}",
 	"dir": "ltr",
 	"name": "{{ metadata.title }}",
 	"short_name": "{{ metadata.short_name }}",
