Removing <abbr> and updating content

--- a/src/_includes/newsletter.njk
+++ b/src/_includes/newsletter.njk
@@ -12,24 +12,19 @@
 			Most content will likely be related to: 👩🏼‍💻
 		</p>
 		<ul>
-			<li><abbr title="HyperText Markup Language">HTML</abbr></li>
-			<li><abbr title="Cascading Style Sheets">CSS</abbr></li>
-			<li><abbr title="Accessibility">A11y</abbr></li>
-			<li><abbr title="Scalable Vector Graphics">SVG</abbr></li>
-			<li>Web Standards</li>
-			<li>Design Tokens</li>
-			<li>Design Systems</li>
-			<li>Web Components</li>
+			<li>Web design</li>
+			<li>Web standards</li>
+			<li>Accessibility</li>
+			<li>Design systems</li>
 		</ul>
 		<details>
 			<summary>
 				But maybe also: 🤨
 			</summary>
 			<ul>
-				<li>
-					<strong>THE</strong> queer experience</li>
-				<li><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></li>
-				<li>Autism</li>
+				<li>Disability</li>
+				<li>Neurodivergence</li>
+				<li>Queerness</li>
 				<li>Intersectionality</li>
 				<li>Leftist politics</li>
 			</ul>
