--- a/src/input/content/pages/feeds.njk
+++ b/src/input/content/pages/feeds.njk
@@ -25,7 +25,7 @@ eleventyNavigation:
     <tbody>
       <tr>
         <th>
-          <abbr title="Really Simple Syndication">RSS</abbr>
+          RSS
         </th>
         <td>
           <a href="/notes.rss">
@@ -83,7 +83,7 @@ eleventyNavigation:
       </tr>
       <tr>
         <th>
-          <abbr title="JavaScript Object Notation">JSON</abbr>
+          JSON
         </th>
         <td>
           <a href="/notes.json">
