--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -47,36 +47,46 @@ eleventyImport:
 						<summary>I'm a <span class="[ p-role ]">front-end developer/designer and accessibility specialist</span> with a strong interest in and passion for...</summary>
 						<ul role="list" class="[ flow ]">
 							<li>
-								{%- inlineIcon "fab:html5" -%}
-								<abbr title="HyperText Markup Language">HTML</abbr>
-							</li>
-							<li>
-								{%- inlineIcon "fab:css3-alt" -%}
-								<abbr title="Cascading Style Sheets">CSS</abbr>
+								{%- inlineIcon "fas:code" -%}
+								Web Standards
+								<ul role="list" class="[ flow margin-block-start-3 ]">
+									<li>
+										{%- inlineIcon "fab:html5" -%}
+										HTML
+									</li>
+									<li>
+										{%- inlineIcon "fab:css3-alt" -%}
+										CSS
+									</li>
+									<li>
+										{%- inlineIcon "fas:book" -%}
+										WCAG
+									</li>
+									<li>
+										{%- inlineIcon "fas:pen-nib" -%}
+										SVG
+									</li>
+									<li>
+										{%- inlineIcon "fas:diagram-project" -%}
+										ARIA
+									</li>
+									<li>
+										{%- inlineIcon "fas:cube" -%}
+										Web Components
+									</li>
+								</ul>
 							</li>
 							<li>
 								{%- inlineIcon "fas:universal-access" -%}
-								<abbr title="Accessibility">A11y</abbr>
-							</li>
-							<li>
-								{%- inlineIcon "fas:pen-nib" -%}
-								<abbr title="Scalable Vector Graphics">SVG</abbr>
-							</li>
-							<li>
-								{%- inlineIcon "fas:code" -%}
-								Web Standards
-							</li>
-							<li>
-								{%- inlineIcon "fas:gears" -%}
-								Design Tokens
+								Accessibility
 							</li>
 							<li>
 								{%- inlineIcon "fas:cubes" -%}
 								Design Systems
 							</li>
 							<li>
-								{%- inlineIcon "fas:cube" -%}
-								Web Components
+								{%- inlineIcon "fas:gears" -%}
+								Design Tokens
 							</li>
 						</ul>
 					</details>
@@ -86,7 +96,7 @@ eleventyImport:
 				{% emoji "🏳️‍⚧️" %} I'm an incredibly <span class="[ p-category ]">queer</span> <span class="[ p-category ]">trans</span> <span class="[ p-gender-identity ]">woman</span>. My pronouns are <a href="https://en.pronouns.page/@ellyloel" class="[ p-pronouns ]"><span class="[ p-pronoun ]">she</span>/<span class="[ p-pronoun ]">her</span></a>.
 			</li>
 			<li>
-				{% emoji "🧠" %} I'm an <span class="[ p-category ]">AuDHD</span> (<span class="[ p-category ]">autistic</span> and <a href="/garden/adhd" class="[ p-category ]"><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></a>) <span class="[ p-category ]">neurodivergent</span>.
+				{% emoji "🧠" %} I'm an <span class="[ p-category ]">AuDHD</span> (<span class="[ p-category ]">autistic</span> and <span class="[ p-category ]">ADHD</span>) <span class="[ p-category ]">neurodivergent</span>.
 			</li>
 			<li>
 				{% emoji "🐈‍⬛" %} I have a little rascal of a cat named <a href="/lulu">Lulu</a>, who I love to bits.
