Replacing twitter with mastodon in humans.txt

--- a/src/input/root/humans.njk
+++ b/src/input/root/humans.njk
@@ -7,7 +7,7 @@ https://humanstxt.org/
 
 Web developer: {{ metadata.author.name }}
 Contact: {{ metadata.author.email }}
-Twitter: {{ metadata.author.links.Twitter }}
+Mastodon: {{ metadata.author.links.Mastodon }}
 
 /* THANKS */
 
