--- a/src/input/content/pages/bookmarks.njk
+++ b/src/input/content/pages/bookmarks.njk
@@ -32,7 +32,7 @@ eleventyImport:
 			{%- setAsync "imageMarkup" -%}
 			<svg viewBox="0 0 200 150" width="200" height="150">
 				{%- set randomNumber -%}{%- random 0, 1 -%}{%- endset -%}
-				<image class="image" xlink:href="{{ bookmark.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
+				<image class="image" xlink:href="https://res.cloudinary.com/ellyloel/image/fetch/f_auto/q_auto:low/c_fill,h_150,w_200/{{ bookmark.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
 			</svg>
 			{%- endsetAsync -%}
 		{%- endif -%}
