--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -39,7 +39,7 @@ eleventyImport:
 	</header>
 
 	<article class="[ about ][ flow ]">
-		<img class="[ u-photo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' hidden>
+		<img class="[ u-photo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' hidden loading="lazy" decoding="async" width="723" height="723">
 		<ul role="list" class="[ p-note ] [ flow ]">
 			<li>
 				<details-utils animate>
@@ -209,7 +209,7 @@ eleventyImport:
 			{%- setAsync "imageMarkup" -%}
 			<svg viewBox="0 0 200 150" width="200" height="150">
 				{%- set randomNumber -%}{%- random 0, 1 -%}{%- endset -%}
-				<image class="image" xlink:href="{{ post.data.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
+				<image class="image" xlink:href="https://res.cloudinary.com/ellyloel/image/fetch/f_auto/q_auto:low/c_fill,h_150,w_200/{{ post.data.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
 			</svg>
 			{%- endsetAsync -%}
 		{%- endif -%}
