Replacing gltf with draco compressed glb

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -30,7 +30,7 @@ eleventyImport:
 						};
 					</script>
 				</template>
-				<model-viewer tabindex="0" loading="eager" alt="A 3D modeled Lego Minifigure designed to look like myself." src="/assets/3d/me.gltf" camera-controls disable-pan disable-zoom shadow-intensity="0" exposure="0.75" shadow-softness="1" camera-orbit="31.49deg 78.9deg 98.24m" field-of-view="30deg">
+				<model-viewer tabindex="0" loading="eager" alt="A 3D modeled Lego Minifigure designed to look like myself." src="/assets/3d/me.glb" camera-controls disable-pan disable-zoom shadow-intensity="0" exposure="0.75" shadow-softness="1" camera-orbit="31.49deg 78.9deg 98.24m" field-of-view="30deg">
 					<img id="poster" src="/assets/img/poster.webp" alt="A 3D modeled Lego Minifigure designed to look like myself.">
 					<div class="progress-bar" slot="progress-bar"></div>
 				</model-viewer>
