--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -22,12 +22,15 @@ eleventyImport:
 				<template data-island>
 					{%- rollup "src/input/js/model-viewer.js" | url -%}
 					<script type="module">
-						document.querySelector(`#lego script[src*="model-viewer"]`).onload = function () {
-							const modelViewer = document?.querySelector("model-viewer");
-							modelViewer.onblur = function () {
-								modelViewer.removeAttribute("tabindex");
-							};
-						};
+						customElements
+							.whenDefined("model-viewer")
+							.then(() => {
+								const modelViewer = document
+									?.querySelector("model-viewer");
+								modelViewer.onblur = function () {
+									modelViewer.removeAttribute("tabindex");
+								};
+							});
 					</script>
 				</template>
 				<model-viewer tabindex="0" loading="eager" alt="A 3D modeled Lego Minifigure designed to look like myself." src="/assets/3d/me.glb" camera-controls disable-pan disable-zoom shadow-intensity="0" exposure="0.75" shadow-softness="1" camera-orbit="31.49deg 78.9deg 98.24m" field-of-view="30deg">
