--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -3,19 +3,24 @@
 	{% include "newsletter.njk" %}
 
 	<div class="[ site-footer ]">
-		<css-doodle click-to-update aria-hidden="true">
-			:doodle {
-				@grid: 20 / 100% 100%;
-				background: var(--neutral-base);
-				font-family: sans-serif;
-				overflow: hidden;
-			}
-			:after {
-				content: \@hex.@r(0x2500, 0x257f);
-				color: var(--accent-@round.@rand(0, 3));
-				font-size: 8vmin;
-			}
-		</css-doodle>
+		<is-land on:visible>
+			<template data-island>
+				{%- rollup "src/input/js/css-doodle.js" | url -%}
+			</template>
+			<css-doodle click-to-update aria-hidden="true">
+				:doodle {
+					@grid: 20 / 100% 100%;
+					background: var(--neutral-base);
+					font-family: sans-serif;
+					overflow: hidden;
+				}
+				:after {
+					content: \@hex.@r(0x2500, 0x257f);
+					color: var(--accent-@round.@rand(0, 3));
+					font-size: 8vmin;
+				}
+			</css-doodle>
+		</is-land>
 		<div class="[ inner ] [ wrapper ]" style="--wrapper-size: 100ch;">
 
 			{%- image
