Releasing "Catch me at Web Directions Code 24"

--- a/src/input/content/tags/tags.njk
+++ b/src/input/content/tags/tags.njk
@@ -28,7 +28,7 @@ pagination:
     - tilsortedbydate
     - TIL
     - TILSortedByDate
-permalink: "{{ tag | slugify }}/"
+permalink: "tags/{{ tag | slugify }}/"
 eleventyComputed:
   title: "{{ tag }}"
 ---
