--- a/src/input/css/global.css
+++ b/src/input/css/global.css
@@ -1,3 +1,7 @@
+@view-transition {
+  navigation: auto;
+}
+
 /* stylelint-disable font-family-no-missing-generic-family-keyword */
 html {
 	--link: var(--accent-solid);
