--- a/src/input/css/blocks/prism.css
+++ b/src/input/css/blocks/prism.css
@@ -29,7 +29,7 @@
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
 	background: #fbfbfb;
-	color: white;
+	color: black;
 }
 
 :not(pre) > code[class*="language-"] {
