--- a/src/input/css/blocks/prism.css
+++ b/src/input/css/blocks/prism.css
@@ -180,7 +180,7 @@ pre[class*="language-"] {
 	:not(pre) > code[class*="language-"],
 	pre[class*="language-"] {
 		background: #fbfbfb;
-		color: white;
+		color: black;
 	}
 
 	.token:is(.comment, .prolog, .cdata) {
