Fixing syndication links

--- a/src/_includes/hidden-microformats.njk
+++ b/src/_includes/hidden-microformats.njk
@@ -5,12 +5,14 @@
 {%- endif -%}
 <a rel="author" class="[ h-card p-author ]" href="https://ellyloel.com" hidden="">Elly Loel</a>
 <a class="[ u-url ]" href="{{ link }}" hidden=""></a>
-{% if syndication-url %}
-	<a rel="syndication" class="[ u-syndication ]" href="{{ syndication-url }}" hidden=""></a>
+{% if syndication %}
+	{%- for entry in syndication -%}
+		<a rel="syndication" class="[ u-syndication ]" href="{{ entry }}" hidden=""></a>
+	{%- endfor -%}
 {% endif %}
 <a href="https://brid.gy/publish/mastodon" class="p-bridgy-omit-link" hidden=""></a>
 <a href="https://brid.gy/publish/bluesky" class="p-bridgy-omit-link" hidden=""></a>
-<p class="p-bridgy-mastodon-content p-bridgy-bluesky-content" hidden="">{{ title }} 
+<p class="p-bridgy-mastodon-content p-bridgy-bluesky-content" hidden="">{{ title }}
 	{%- if bookmark.link -%}
 		<br> 🔖 {{ bookmark.link }}
 	{%- endif -%}
