--- a/src/input/root/feeds/not-bookmarks.rss.njk
+++ b/src/input/root/feeds/not-bookmarks.rss.njk
@@ -1,12 +1,12 @@
 ---
-permalink: "feed.rss"
+permalink: "not-bookmarks.rss"
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ metadata.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
 	<channel>
 		<title>{{ metadata.title }}</title>
 		<link>{{ metadata.url }}</link>
-		<atom:link href="{{ '/feed.rss' | absoluteUrl(metadata.url) }}" rel="self" type="application/rss+xml"/>
+		<atom:link href="{{ '/not-bookmarks.rss' | absoluteUrl(metadata.url) }}" rel="self" type="application/rss+xml"/>
 		<description>{{ metadata.description }}</description>
 		<language>{{ metadata.lang }}</language>
 		<lastBuildDate>{{ collections.notBookmarksSortedByDate | getLatestCollectionItemDate | dateToRfc822 }}</lastBuildDate>
