--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -14,7 +14,7 @@
 {%- endif -%}
 
 {#- General -#}
-<meta name="description" content="{{ desc | trim }}">
+<meta name="description" content="{{ desc }}">
 <link rel="canonical" href="{{ canonical }}">
 <meta name="author" content="{{ metadata.author.name }}">
 <meta name="generator" content="{{ eleventy.generator }}">
